--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
 
 div {
   background-color: white;
+  padding: 5px;
 }
 
 h1 {
@@ -38,7 +39,7 @@ hr {
   border: dotted #EAF6F6 6px;
   border-bottom: none;
   width: 4%;
-  margin: 100px auto;
+  margin: 50px auto;
 }
 
 a {
@@ -51,6 +52,7 @@ a {
 
 a:hover {
   color: #EAF6F6;
+  text-decoration: underline;
 }
 
 /****************CLASS SELECTORS**************/
@@ -105,24 +107,11 @@ a:hover {
   cursor: pointer;
   text-align: center;
   margin-top: 50px;
-}
 
-.btn:hover {
-  border: solid #0059A0 3px;
-  background: #2bc4ad;
-  background-image: -webkit-linear-gradient(top, #66BFBF, #66BFBF);
-  background-image: -moz-linear-gradient(top, #66BFBF, #66BFBF);
-  background-image: -ms-linear-gradient(top, #66BFBF, #66BFBF);
-  background-image: -o-linear-gradient(top, #66BFBF, #66BFBF);
-  background-image: linear-gradient(to bottom, #66BFBF, #66BFBF);
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
-  text-decoration: none;
 }
 
 .skill-row {
-  margin: 50px auto;
+  margin: 100px auto;
   width: 50%;
   text-align: left;
 }
